force-app/main/default/objects/RTL_Opportunity_Running_Number__c/RTL_Opportunity_Running_Number__c.object-meta.xml
<CustomObject>
    <description>to track retail opportunity running number for each year and each customer</description>
    <label>Opportunity Running Number</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Running Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Running Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>