force-app/main/default/objects/RTL_Opportunity_Running_Number__c/fields/RTL_Account__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Running Numbers</relationshipLabel>
    <relationshipName>Opportunity_Running_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>