force-app/main/default/objects/RTL_Opportunity_Running_Number__c/fields/RTL_Number__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number__c</fullName>
    <label>Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>