force-app/main/default/objects/RTL_Opportunity_Running_Number__c/fields/RTL_Year__c.field-meta.xml
<CustomField>
    <fullName>RTL_Year__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>